--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://jprier.github.io/josh-blog/search/" />
 <meta property="og:site_name" content="Joshs Blog" />
 <script type="application/ld+json">
-{"description":"My Blog for Notes, Projects, and Rambles","url":"https://jprier.github.io/josh-blog/search/","@type":"WebPage","headline":"Search","@context":"https://schema.org"}</script>
+{"url":"https://jprier.github.io/josh-blog/search/","@type":"WebPage","headline":"Search","description":"My Blog for Notes, Projects, and Rambles","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/josh-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jprier.github.io/josh-blog/feed.xml" title="Joshs Blog" /><link rel="shortcut icon" type="image/x-icon" href="/josh-blog/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
